--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -8,6 +8,51 @@
     <a asp-action="Register" asp-controller="Account" class="btn btn-primary ms-3">Register</a>
 </div>
 
-<div class="card">
-    
+<button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
+
+<div class="toast-container position-absolute bottom-0 end-0 p-3">
+    <div class="toast bg-danger" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header bg-danger">
+            <img src="~/utilities/error.svg" class="rounded me-2" alt="...">
+            <strong class="me-auto text-dark">Error</strong>
+            <small class="text-bold text-dark">just now</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            See? Just like this.
+        </div>
+    </div>
+    <div class="toast bg-primary" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header bg-primary">
+            <img src="~/utilities/info.svg" class="rounded me-2">
+            <strong class="me-auto text-dark">Info</strong>
+            <small class="text-bold text-dark">just now</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            Heads up, toasts will stack automatically
+        </div>
+    </div>
 </div>
+
+
+
+<div class="card">
+</div>
+
+<script type="text/javascript">
+    const toastTrigger = document.getElementById('liveToastBtn')
+    const dilation = 700;
+    if (toastTrigger) {
+        toastTrigger.addEventListener('click', function () {
+            const toasts = document.getElementsByClassName('toast');
+            for (let i = 0; i < toasts.length; i++) {
+                setTimeout(() => {
+                    let toast = new bootstrap.Toast(toasts[i]);
+                    toast.show();
+                }, i * dilation);
+            }
+        });
+    }
+</script>
+@* images are success, error, info, warning *@
