--- a/NCloud/NCloud/Views/Shared/Components/CloudNotification/Notification.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/CloudNotification/Notification.cshtml
@@ -1,16 +1,16 @@
 ﻿@using Newtonsoft.Json;
 @{
-    List<ACloudNotification>? queue = null;
+    List<CloudNotificationAbstarct>? queue = null;
     if (TempData["Notification"] is not null)
     {
-        queue = JsonConvert.DeserializeObject<List<ACloudNotification>>((string)TempData["Notification"]!);
+        queue = JsonConvert.DeserializeObject<List<CloudNotificationAbstarct>>((string)TempData["Notification"]!);
     }
 }
 
 @if (queue is not null)
 {
     <div class="toast-container position-absolute bottom-0 end-0 p-3">
-        @foreach(ACloudNotification notification in queue)
+        @foreach(CloudNotificationAbstarct notification in queue)
         {
             <div class="toast @(notification.Color)" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
                 <div class="toast-header @(notification.Color)">
