--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -107,37 +107,37 @@
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-                                    <a asp-controller="Drive" class="btn btn-secondary " asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                                    <a asp-controller="Drive" class="btn btn-primary " asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectDirWeb" type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectDirWeb" type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')">
                                         <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_1" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_1">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnectDirWeb" type="button" onclick="connectDirectoryToWeb('@Url.Action("ConnectDirectoryToWeb", "Drive")','@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnectDirWeb" type="button" onclick="connectDirectoryToWeb('@Url.Action("ConnectDirectoryToWeb", "Drive")','@item.Info.Name', '@counter')">
                                         <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_2" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_2">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "" : "hidden")" id="@(counter)_btnDisConnectDirApp" type="button" onclick="disConnectDirectoryFromApp('@Url.Action("DisConnectDirectoryFromApp", "Drive")', '@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToApp ? "" : "hidden")" id="@(counter)_btnDisConnectDirApp" type="button" onclick="disConnectDirectoryFromApp('@Url.Action("DisConnectDirectoryFromApp", "Drive")', '@item.Info.Name', '@counter')">
                                         <img src="~/utilities/noshare.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_3" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_3">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "hidden" : "")" id="@(counter)_btnConnectDirApp" type="button" onclick="connectDirectoryToApp('@Url.Action("ConnectDirectoryToApp", "Drive")','@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToApp ? "hidden" : "")" id="@(counter)_btnConnectDirApp" type="button" onclick="connectDirectoryToApp('@Url.Action("ConnectDirectoryToApp", "Drive")','@item.Info.Name', '@counter')">
                                         <img src="~/utilities/share.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_4" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_4">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <a asp-controller="Drive" class="btn btn-primary" asp-action="DownloadFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
+                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
                                     <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                 </div>
                             </div>
@@ -246,36 +246,37 @@
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    
-                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectFileWeb" type="button" onclick="disConnectFileFromWeb('@Url.Action("DisConnectFileFromWeb", "Drive")', '@item.Info.Name', '@counter')">
+                                    <a asp-controller="Drive" class="btn btn-primary" asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+
+                                    <button class="btn btn-secondary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectFileWeb" type="button" onclick="disConnectFileFromWeb('@Url.Action("DisConnectFileFromWeb", "Drive")', '@item.Info.Name', '@counter')">
                                         <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_1" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_1">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnectFileWeb" type="button" onclick="connectFileToWeb('@Url.Action("ConnectFileToWeb", "Drive")','@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnectFileWeb" type="button" onclick="connectFileToWeb('@Url.Action("ConnectFileToWeb", "Drive")','@item.Info.Name', '@counter')">
                                         <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_2" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_2">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "" : "hidden")" id="@(counter)_btnDisConnectFileApp" type="button" onclick="disConnectFileFromApp('@Url.Action("DisConnectFileFromApp", "Drive")', '@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToApp ? "" : "hidden")" id="@(counter)_btnDisConnectFileApp" type="button" onclick="disConnectFileFromApp('@Url.Action("DisConnectFileFromApp", "Drive")', '@item.Info.Name', '@counter')">
                                         <img src="~/utilities/noshare.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_3" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_3">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
-                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "hidden" : "")" id="@(counter)_btnConnectFileApp" type="button" onclick="connectFileToApp('@Url.Action("ConnectFileToApp", "Drive")','@item.Info.Name', '@counter')">
+                                    <button class="btn btn-secondary @(item.IsConnectedToApp ? "hidden" : "")" id="@(counter)_btnConnectFileApp" type="button" onclick="connectFileToApp('@Url.Action("ConnectFileToApp", "Drive")','@item.Info.Name', '@counter')">
                                         <img src="~/utilities/share.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_4" />
                                         <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_4">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
 
+                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFile" asp-route-fileName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
                                     <a asp-controller="Editor" class="btn btn-secondary" asp-action="Index" asp-route-fileName="@item.Info.Name"><img src="~/utilities/code-slash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                     <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFile" asp-route-id="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                 </div>
