--- a/NCloud/NCloud/Views/DashBoard/Index.cshtml
+++ b/NCloud/NCloud/Views/DashBoard/Index.cshtml
@@ -7,7 +7,7 @@
 }
 <div>
     <h1>Available Space</h1>
-    <div></div>
+    <div>@(User.Identity?.Name ?? "Unassigned")</div>
 </div>
 <div class="mt-2">
     <h1>Recent Folders</h1>
