--- a/NCloud/NCloud/Views/Web/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Web/DownloadItems.cshtml
@@ -71,7 +71,7 @@
         </tbody>
     </table>
     <div class="d-flex w-100 justify-content-center">
-        <button type="submit" class="btn btn-outline-secondary border border-secondary border-3" id="downloadBtn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+        <button type="submit" class="btn btn-primary border border-secondary border-3" id="downloadBtn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></button>
     </div>
 </form>
 <script type="text/javascript">
