--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -2,8 +2,15 @@
     ViewData["Title"] = "Welcome Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4 mb-5">Welcome to the NCloud Service!</h1>
-    <a asp-action="Login" asp-controller="Account" class="btn btn-primary">Login</a>
-    <a asp-action="Register" asp-controller="Account" class="btn btn-primary ms-3">Register</a>
+<div class="row">
+    <div class="w-100 justify-content-center text-center">
+        <img src="/utilities//cloud_logo.png" class="img-fluid" width="400" />
+    </div>
+    <div class="col-auto w-100 mb-5 justify-content-center text-center fw-bold">
+        <h3>Welcome to @Constants.AppName!</h3>
+    </div>
+    <div class="w-100 justify-content-center text-center">
+        <a asp-action="Login" asp-controller="Account" class="btn btn-primary w-25">Login</a>
+        <a asp-action="Register" asp-controller="Account" class="btn btn-primary w-25 ms-3">Register</a>
+    </div>
 </div>
