--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -37,13 +37,8 @@
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a asp-controller="Editor" asp-action="CodeEditor" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Code Editor</span>
-                            </a>
-                        </li>
-                        <li class="nav-item my-2">
-                            <a asp-controller="Editor" asp-action="TextEditor" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/window.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Text Editor</span>
+                            <a asp-controller="Editor" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
+                                <span class="d-inline m-1"><img src="~/utilities/editor-general.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Editors</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
